--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Montserrat&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -19,17 +19,17 @@
 
     <header>
         <nav>
-            <a href="/" class="logo"><span class="logo-blue">WEB</span>STUDIO</a>
+            <a href="/" class="logo link"><span class="logo-blue">WEB</span>STUDIO</a>
                 <ul class="site-nav list">
-                    <li><a href="./index.html" class="link">Studio</a></li>
-                    <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-                    <li><a href="/" class="link">Contacts</a></li>
+                    <li><a href="./index.html" class="link header-text">Studio</a></li>
+                    <li><a href="./portfolio.html" class="link header-text">Portfolio</a></li>
+                    <li><a href="/" class="link header-text">Contacts</a></li>
                 </ul>
         </nav>
 
         <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="auth-link">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11" class="auth-link">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="auth-link link">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)111-11-11" class="auth-link link">+11 (000) 111-11-11</a></li>
         </ul>
 
     </header>
@@ -107,8 +107,8 @@
 
     </main>
     
-    <footer>
-        <a href="/" class="logo"><span class="logo-blue">WEB</span><span class="logo-white">STUDIO</span></a>
+    <footer class="footer-all">
+        <a href="/" class="logo link"><span class="logo-blue">WEB</span><span class="logo-white">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
