--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link
-        href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Montserrat&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -17,17 +17,17 @@
 
     <header>
         <nav>
-            <a href="/" class="logo"><span class="logo-blue">WEB</span>STUDIO</a>
+            <a href="/" class="logo link"><span class="logo-blue">WEB</span>STUDIO</a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Studio</a></li>
-                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-                <li><a href="/" class="link">Contacts</a></li>
+                <li><a href="./index.html" class="link header-text">Studio</a></li>
+                <li><a href="./portfolio.html" class="link header-text">Portfolio</a></li>
+                <li><a href="/" class="link header-text">Contacts</a></li>
             </ul>
         </nav>
     
         <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="auth-link">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11" class="auth-link">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="auth-link link">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)111-11-11" class="auth-link link">+11 (000) 111-11-11</a></li>
         </ul>
     
     </header>
@@ -53,63 +53,63 @@
             <h2 hidden>Gallery</h2>
             <ul class="list">
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/banking-app.jpg" alt="Banking App screens">
                         <h3 class="gallery-title">Banking App Interface Concept</h3>
                         <p class="gallery-text">App</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/Payment-by-phone.jpg" alt="Payment by phone">
                         <h3 class="gallery-title">Cashless Payment</h3>
                         <p class="gallery-text">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/laptop-and-phone.jpg" alt="Laptop and phone screens">
                         <h3 class="gallery-title">Meditaion App</h3>
                         <p class="gallery-text">App</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/car-wheel.jpg" alt="Car wheel and a phone screen">
                         <h3 class="gallery-title">Taxi Service</h3>
                         <p class="gallery-text">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/phone-screens.jpg" alt="Phone screens">
                         <h3 class="gallery-title">Screen Illustrations</h3>
                         <p class="gallery-text">Design</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/Girl.jpg" alt="A girl">
                         <h3 class="gallery-title">Online Courses</h3>
                         <p class="gallery-text">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/Cards.jpg" alt="Promoting house under control cards">
                         <h3 class="gallery-title">Instagram Stories Concept</h3>
                         <p class="gallery-text">Design</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/part-of-woman-and-fruit.jpg" alt="A part of woman body with fruit">
                         <h3 class="gallery-title">Organic Food</h3>
                         <p class="gallery-text">Web Site</p>
                     </a>
                 </li>
                 <li>
-                    <a class="portfolio-link" href="#">
+                    <a class="portfolio-link link" href="#">
                         <img width="360" height="300" src="./images/Coffe.jpg" alt="Coffe">
                         <h3 class="gallery-title">Fresh Coffee</h3>
                         <p class="gallery-text">Web Site</p>
@@ -121,8 +121,8 @@
 
 <!--footer-->
 
-    <footer>
-        <a href="/" class="logo"><span class="logo-blue">WEB</span><span class="logo-white">STUDIO</span></a>
+    <footer class="footer-all">
+        <a href="/" class="logo link"><span class="logo-blue">WEB</span><span class="logo-white">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
